Fix style bug on ios
Overflow from body didn’t get hidden. Horizontally scrollable when in
portrait mode on iPad mini.

--- a/resources_src/css/_websiteDetailsStyle.scss
+++ b/resources_src/css/_websiteDetailsStyle.scss
@@ -1,12 +1,11 @@
-body {
-  overflow-x: hidden;
-}
+
 
 .websiteDetailsJumbo {
   @extend .contentJumboDark;
 
   vertical-align: center;
   padding-bottom: 30px;
+  overflow: hidden;
 
   .titleContainer {
     text-align: center;
